--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product--uh-axe.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product--uh-axe.html.twig
@@ -42,6 +42,7 @@
     {% if product.variation_field_original_price[0]['#markup'] %}
       {{ product.variation_field_original_price }}
     {% endif %}
+    {{ product.variation_list_price }}
     {{ product.variation_price }}
     {{ product.title }}
     {{ product.field_brand }}
