--- a/web/themes/custom/commerce_2_demo/templates/commerce/add-to-cart-form--uh-axe.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/add-to-cart-form--uh-axe.html.twig
@@ -9,6 +9,9 @@
 * @ingroup themeable
 */
 #}
+
+{% set variation = form['#product_variation'] %}
+
 {# User selected default variation ID (this is used with jQuery only) #}
 {% if form['#default_variation_id']%}
   <span class="default-variation-id" data-default-variation-id="{{ form['#default_variation_id'] }}"></span>
@@ -159,7 +162,7 @@
 </div>
 
 <div class="row row-eq-height">
-  {% if form['#product_variation'].field_image.entity %}
+  {% if variation.field_image.entity %}
   {# Product images with overlay information. #}
   <div class="col-xs-6 col-sm-8 col-md-9 product__images">
     {# Left section. #}
@@ -182,8 +185,8 @@
       set variation_field_image = {
       '#theme':      'image_style',
       '#style_name': 'uh_axe',
-      '#uri':        form['#product_variation'].field_image.entity.uri.value,
-      '#alt':        form['#product_variation'].field_image.alt,
+      '#uri':        variation.field_image.entity.uri.value,
+      '#alt':        variation.field_image.alt,
       }
       %}
       {{ variation_field_image }}
@@ -288,8 +291,15 @@
     </div>
 
     <div class="hidden-xs hidden-sm product__intro-bottom">
+      {% if variation.getListPrice %}
+        <div class="field--name-list-price">
+          <div class="field__label">{{ 'List price:'|t }}</div>
+          <div class="field__item">{{ variation.getListPrice|commerce_price_format }}</div>
+        </div>
+      {% endif %}
+
       <div class="field--name-price">
-        {{ form['#product_variation'].price.value.0|commerce_price_format }}
+        {{ variation.getPrice|commerce_price_format }}
       </div>
 
       {% if form['#bundle_available'] == 'yes' %}
@@ -313,8 +323,15 @@
   <div class="col-xs-12 text-center product__intro  product__intro--mobile">
     <div class="product__intro-bottom">
       <div class="product__intro--mobile__left">
+        {% if variation.getListPrice %}
+          <div class="field--name-list-price">
+            <div class="field__label">{{ 'List price:'|t }}</div>
+            <div class="field__item">{{ variation.getListPrice|commerce_price_format }}</div>
+          </div>
+        {% endif %}
+
         <div class="field--name-price">
-          {{ form['#product_variation'].price.value.0|commerce_price_format }}
+          {{ variation.getPrice|commerce_price_format }}
         </div>
 
         {% if form['#bundle_available'] == 'yes' %}
