--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product--uh-recurring-digital.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product--uh-recurring-digital.html.twig
@@ -44,6 +44,7 @@
       {{ product.variation_field_original_price }}
     {% endif %}
     <div class="price__starting-at">{{ 'Starting at'|t }}</div>
+    {{ product.variation_list_price }}
     {{ product.variation_price }}
     {{ product.title }}
     {{ product.field_brand }}
