--- a/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_logo.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_logo.scss
@@ -3,6 +3,7 @@
  */
 .component-logo {
   min-height: 50px;
+  margin-bottom: 0;
 
   img {
     display: block;
@@ -17,6 +18,7 @@
   margin: 0 auto;
   padding: 0;
   opacity: 1;
+  outline: none;
 
   &:hover,
   &:focus {
