--- a/web/themes/custom/commerce_2_demo/templates/pages/page--type--landing-page.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/page--type--landing-page.html.twig
@@ -55,9 +55,9 @@
 
 {# Main Content. #}
 <div class="site-content">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-sm-12 landing-page--content-wrapper">
         <main class="content__main-content clearfix" role="main">
           <div class="visually-hidden"><a id="main-content" tabindex="-1"></a></div>
           {% if page.highlighted %}
