--- a/web/themes/custom/commerce_2_demo/templates/paragraphs/paragraph--image-strap--full-width.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/paragraphs/paragraph--image-strap--full-width.html.twig
@@ -88,7 +88,7 @@
       </div>
       {% endif %}
       <div class="component-image-strap__container container">
-        <div{{ row_style_attributes }} class="row">
+        <div class="row">
           {% set col_class = 'col-md-6' %}
           {% set col2_class = 'col-md-6' %}
           {% if paragraph.field_alignment.value and (paragraph.field_alignment.value == 'right') %}
