--- a/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_cta.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_cta.scss
@@ -16,7 +16,12 @@
     height: auto;
   }
 }
-.component-cta__link {
+div.component-cta__link {
+  position: unset;
+
+  .field--type-link {
+    position: unset;
+  }
 
   a {
     position: absolute;
@@ -38,7 +43,7 @@
     }
   }
 }
-.component-cta__link-text {
+div.component-cta__link-text {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -49,7 +54,7 @@
   font-size: 16px;
   font-weight: bold;
   line-height: 1.2;
-  color: #fff;
+  color: #fff !important;
   text-align: center;
   @include background-opacity(#000, 0.6);
   z-index: 0;
