--- a/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_strap.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_strap.scss
@@ -18,7 +18,7 @@
     }
   }
 }
-.component-strap__overlay {
+div.component-strap__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -65,24 +65,6 @@
     display: inline-block;
     vertical-align: top;
   }
-  .btn,
-  .btn--primary,
-  .btn--default {
-    margin: 0 5px 15px 5px;
-    padding: 13px 20px;
-    font-size: 20px;
-  }
-  .btn--default {
-    color: #fff;
-    border: 1px solid #fff;
-    @include background-opacity(#000, 0.4);
-
-    &:hover,
-    &:focus {
-      color: #fff;
-      background: #000;
-    }
-  }
 }
 
 // Webforms.
@@ -103,16 +85,5 @@
     margin: 20px 20px;
     padding: 29px 0 0 0;
     vertical-align: top;
-  }
-  .btn--default {
-    color: #fff;
-    border: 1px solid #fff;
-    @include background-opacity(#000, 0.4);
-
-    &:hover,
-    &:focus {
-      color: #fff;
-      background: #000;
-    }
   }
 }
