Completes styling and template changes for paragraph components within general pages

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_landing-page.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_landing-page.scss
@@ -20,7 +20,7 @@
     margin: 0;
     padding: 0;
   }
-  // Remove bootstrap column margins.
+  // Remove bootstrap column padding.
   .landing-page--content-wrapper {
     padding-left: 0;
     padding-right: 0;
