--- a/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_featured-products.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_featured-products.scss
@@ -125,3 +125,10 @@
     padding: 0;
   }
 }
+
+// Overrides for in-page featured products.
+.paragraph--view-mode--default {
+  a.product--teaser .product__thumbnail {
+    height: 160px;
+  }
+}
