--- a/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_content-carousel.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_content-carousel.scss
@@ -74,12 +74,12 @@
 }
 .component-content-carousel__slide {
   margin: 0 40px;
-  padding: 20px 20px 0;
+  padding: 20px;
   border: 1px solid $gray-border;
 
   @media (min-width: $screen-sm-min) {
     margin: 0 80px;
-    padding: 30px 30px 0;
+    padding: 30px;
   }
   // Set standard content margins.
   .field {
