Add button component styles and update accordion styles

--- a/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_accordion.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_accordion.scss
@@ -1,6 +1,11 @@
 /**
  * Accordion.
  */
+.component-accordion {
+  max-width: 1140px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .base-accordion {
   clear: both;
   margin: 0 0 28px 0;
