--- a/web/themes/custom/commerce_2_demo/sass/custom/style.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/style.scss
@@ -36,6 +36,7 @@
 @import 'paragraphs/tabs';
 @import 'paragraphs/uh-axe-slider';
 @import 'paragraphs/webform';
+@import 'paragraphs/button-component';
 
 // Pages.
 @import 'site_header';
