Add left and right padding to full-width accordion paragraph

--- a/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_accordion.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_accordion.scss
@@ -5,6 +5,11 @@
   max-width: 1140px;
   margin-left: auto;
   margin-right: auto;
+
+  &.paragraph--view-mode--full-width {
+    padding-left: 15px;
+    padding-bottom: 15px;
+  }
 }
 .base-accordion {
   clear: both;
