--- a/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_accordion.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_accordion.scss
@@ -29,13 +29,13 @@
     line-height: 1.0;
     text-decoration: none;
     outline: none;
-    border-bottom: 1px solid #e6e6e6;
+    border-bottom: 1px solid $gray-border;
 
     // Arrow icon.
     &:before {
       @include fa-icon();
       content: $fa-var-angle-right;
-      color: lighten($gray-light, 10%);
+      color: $c-link;
       position: absolute;
       left: 0;
       transition: all .2s ease-in-out;
@@ -46,7 +46,7 @@
 
       // Arrow icon.
       &:before {
-        color: $gray-light;
+        color: $c-link-hover;
       }
     }
   }
@@ -67,7 +67,7 @@
     display: none;
     margin: 0;
     padding: 20px;
-    border-bottom: 1px solid #e6e6e6;
+    border-bottom: 1px solid $gray-border;
 
     p:last-child {
       margin: 0;
