--- a/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_featured-products.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/paragraphs/_featured-products.scss
@@ -3,8 +3,9 @@
  */
 .component-featured-products {
   clear: both;
-  margin: 0 0 40px 0;
+  margin: 0 auto 40px;
   padding: 0 15px;
+  max-width: 1400px;
 }
 .component-featured-products__title {
   margin-bottom: 12px;
