--- a/web/themes/custom/commerce_2_demo/templates/block/block--type--feature-beacon.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/block/block--type--feature-beacon.html.twig
@@ -63,15 +63,12 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" id="headerClose" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title"><i class="fa fa-star fa-lg"></i> {{ 'Feature'|t }}</h4>
+          <h4 class="modal-title"><i class="fa fa-star fa-lg"></i>
+            {{ label ? label : 'Feature'|t }}
+          </h4>
         </div>
         <div class="modal-body">
-          {% if label %}
-            <h3{{ title_attributes }}>{{ label }}</h3>
-          {% endif %}
-
           {{ content }}
-
         </div>
         <div class="modal-footer">
           <button type="button" id="footerClose" class="btn btn-default" tabindex="-1" data-dismiss="modal">{{ 'Close'|t }}</button>
