Change feature video youtube icon and player styling

--- a/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
@@ -575,6 +575,13 @@ table {
   opacity: 1;
 }
 
+.modal-header {
+  .close {
+    position: relative;
+    z-index: 1;
+  }
+}
+
 .modal-credits {
   float: left;
   margin: 8px 0;
