--- a/web/themes/custom/commerce_2_demo/js/contrib/lightweight-youtube-player/lw-yt-player.css
+++ b/web/themes/custom/commerce_2_demo/js/contrib/lightweight-youtube-player/lw-yt-player.css
@@ -3,7 +3,8 @@
 .feature-video {
   position: relative;
   width: 100%;
-  border: 1px solid #e5e5e5;
+  border: 1px solid #ccc;
+  box-shadow: 0 10px 19px -8px #000;
 }
 
 .feature-video__iframe {
@@ -50,7 +51,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: url(yt_icon_dark.png) no-repeat center center;
+  background: url(yt_icon_light.png) no-repeat center center;
   background-size: 10%;
 }
 
