--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_landing-page.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_landing-page.scss
@@ -8,9 +8,10 @@
     margin-left: auto;
     margin-right: auto;
     max-width: $screen-lg;
-  }
-  .region-highlighted > div {
-    margin: 20px 0;
+
+    > div {
+      margin: 0 15px 20px;
+    }
   }
   // Force hide the page title block.
   .block-page-title-block {
