--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -19,6 +19,8 @@
  * @ingroup themeable
  */
 #}
+
+{# Product teaser. #}
 {% if view_mode == 'teaser' %}
 
   {%
@@ -29,7 +31,6 @@
     ]
   %}
 
-  {# Product teaser. #}
   <a href="{{ product_url }}" {{ attributes.addClass(classesTeaser) }} aria-label="{{ product_entity.title.value }}">
     <div class="product__thumbnail">
       {% if product.field_add_on_products['#items'] %}
@@ -54,6 +55,17 @@
     {{ product.field_brand }}
     {{ product.field_artist }}
   </a>
+
+{# Image for Point of Sale. #}
+{% elseif view_mode == 'image_for_pos' %}
+
+  <div class="commerce-pos-autocomplete-results__image">
+    {% if product_variation_images.0.images.0.entity.uri.value %}
+      <img src="{{ product_variation_images.0.images.0.entity.uri.value|image_style('thumbnail') }}" alt="" />
+    {% endif %}
+  </div>
+
+{# Product full page (default). #}
 {% else %}
 
   {%
@@ -64,7 +76,6 @@
     ]
   %}
 
-  {# Product full page. #}
   <article{{ attributes.addClass(classesFull) }}>
     <div class="row">
       <div class="col-xs-12 back-and-share">
