--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-product.html.twig
@@ -62,6 +62,8 @@
   <div class="commerce-pos-autocomplete-results__image">
     {% if product_variation_images.0.images.0.entity.uri.value %}
       <img src="{{ product_variation_images.0.images.0.entity.uri.value|image_style('thumbnail') }}" alt="" />
+    {% else %}
+      <img src="{{ base_path ~ directory }}/gfx/image-for-pos/image_placeholder.jpg" alt="" />
     {% endif %}
   </div>
 
